--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
 
 .container {
   display: flex;
+  justify-content: center;
+}
+
+.row {
+  width: 100%;
 }
 
 .title{
@@ -83,18 +88,45 @@ body {
  display: inline-block;
  box-sizing: border-box;
  background: #F7F0EF;
- padding: 2em;
- width: 100%;
+ padding: 1em;
+ width: auto;
+ height: auto;
  max-width: 385px;
  text-align: center;
  position: absolute;
  border-radius: .5em;
 }
 
-@media all and (max-width: 750px){
+@media all and (max-width: 250px){
   .modal{
     max-width: 250px;
+
   }
+}
+
+@media all and (min-width: 250px) and (max-width: 750px){
+  .modal{
+    max-width: 250px;
+    position: relative;
+  }
+}
+
+.modal-header{
+  border: none;
+}
+
+.modal-header.close{
+  padding: 0rem 1rem;
+}
+
+.modal-content {
+  background-color: #F7F0EF;
+  border:none;
+}
+
+.modal-backdrop.fade {
+  width:100%;
+  height:100%;
 }
 
 .title-name{
@@ -102,35 +134,21 @@ body {
   padding: .5em;
 }
 
-@media all and (max-width: 750px){
+@media all and (min-width: 250px) and (max-width: 750px){
   .title-name{
-    font-size: 35px;
+    font-size: 25px;
   }
 }
 
 .close-button{
   color: black;
   position: absolute;
-  font-size: 12px;
-  border: 1px solid black;
-  border-radius: .25em;
-  padding: .5em;
-  top: 20px;
+  font-size: 30px;
   right: 20px;
 }
 
 @media all and (max-width: 750px){
   .close-button{
-    font-size: 9px;
-  }
-}
-
-.display{
-  display: inline-table;
-}
-
-@media all and (max-width: 750px){
-  .display{
-    display: block;
+    font-size: 20px;
   }
 }
